# hb-subset-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README.tpl  build.rs  cliff.toml  wrapper.h
.github/workflows/: rust.yml
src/: blob.rs  common.rs  error.rs  font_face.rs  lib.rs  map.rs  set.rs  subset.rs  sys.rs
src/bindings/: blob.rs  font_face.rs  mod.rs  set.rs  subset.rs
src/subset/: flags.rs
tests/fonts/: README.md
